💄 prevent color overflow

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ body {
   width: 100%;
   height: 60%;
   max-width: 500px;
+  overflow: hidden;
   background-color: var(--color-bg-dark);
   border-radius: 1rem;
   display: flex;
